# island-model-memetic-algorithm

./: .gitignore  CMakeLists.txt  README.md  averages.csv  calc.sh
results/: renaming_script.sh  results_ftv47.atsp_16threads_10seconds_true  results_ftv47.atsp_16threads_30seconds_true.csv  results_ftv47.atsp_16threads_60seconds_true  results_ftv47.atsp_1threads_10seconds_true  results_ftv47.atsp_1threads_30seconds_true.csv  results_ftv47.atsp_1threads_60seconds_true  results_ftv47.atsp_2threads_10seconds_true  results_ftv47.atsp_2threads_30seconds_true  results_ftv47.atsp_2threads_60seconds_true.csv  results_ftv47.atsp_4threads_10seconds_true.csv  results_ftv47.atsp_4threads_30seconds_true  results_ftv47.atsp_4threads_60seconds_true  results_ftv47.atsp_8threads_10seconds_true  results_ftv47.atsp_8threads_30seconds_true  results_ftv47.atsp_8threads_60seconds_true  results_ftv55.atsp_16threads_10seconds_true  results_ftv55.atsp_16threads_30seconds_true.csv  results_ftv55.atsp_16threads_60seconds_true  results_ftv55.atsp_1threads_10seconds_true.csv  results_ftv55.atsp_1threads_30seconds_true.csv  results_ftv55.atsp_1threads_60seconds_true  results_ftv55.atsp_2threads_10seconds_true  results_ftv55.atsp_2threads_30seconds_true  results_ftv55.atsp_2threads_60seconds_true  results_ftv55.atsp_4threads_10seconds_true  results_ftv55.atsp_4threads_30seconds_true  results_ftv55.atsp_4threads_60seconds_true.csv  results_ftv55.atsp_8threads_10seconds_true.csv  results_ftv55.atsp_8threads_30seconds_true  results_ftv55.atsp_8threads_60seconds_true.csv  (+15 more)
src/: Genetic.cpp  Genetic.h  (+4 more)
